@@ -6,7 +6,7 @@
 \encoding{latin1}
 
 
-\section{Changes in surveillance version 1.8-4 (2015-01-19)}{
+\section{Changes in surveillance version 1.8-4 (2015-01-27)}{
 
 \subsection{NEW FEATURES}{
   \itemize{
@@ -24,7 +24,10 @@
   \itemize{
     \item Initial data processing in \code{twinstim()} is faster
     since event sources are only re-determined if there is effective
-    need for an update (due to subsetting or a change of \code{qmatrix}).
+    need for an update (due to subsetting or a change of
+    \code{qmatrix}).
+
+    \item \code{formatPval()} disables \code{scientific} notation by default.
   }
 }
 
